Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

  Added : New action in Remove menu: "Remove Completed Links and Deleted Files"
  Added : New user option: "Slim lines in History dialog"
  Added : New user options for speed limiter
  Added : New download state SKIPPED, which is used for files that already exist and were skipped by the user
  Fixed : Problem with downloading txt files + using description, see http://wordrider.net/forum/read.php?7,4681,4696

 29th October 2009 - FreeRapid Downloader 0.83 Update 1
  Added : Romanian language [thanks to de-a dura lex]
  Added : Experimental: new -DtableSortable boolean internal property to enable sorting in the main table
          (default value is false, only for testers, see documentation how to use internal properties) 
  Changed : file links.txt in the configuration folder adds a description to every link
  Fixed : invalid label in menu for russian and hungarian language
  Fixed : visible status of toolbar and statusbar is not saved
  Fixed : removed blinking of splash screen on WindowsXP
  Fixed : Rapidshare.com FileInputStream is empty (problem when connection was interrupted)
  Fixed : regression: enabled option hide downloaded files don't hide the most recently download file [reported by Mauser]

18th October 2009 - FreeRapid Downloader 0.83
  Changed : updated chinese translation
  Changed : minor internal changes in plugins API  
  Changed : updated plugins to their latest versions

4th October 2009 - FreeRapid Downloader 0.83 Release Candidate 2
  Changed : minor internal changes in plugins API 
  Changed : optimizations: minimized size of SwingX library
  Changed : updated plugins to their latest versions
  Changed : new cancelOnEscape internal property to disable ESC keystroke for action Cancel

20th September 2009 - FreeRapid Downloader 0.83 Release Candidate
  Added : startup.properties file in FRD's directory - see comments in this file for more details