@@ -2,8 +2,10 @@ package cz.vity.freerapid.core.tasks;
 
 import cz.vity.freerapid.core.tasks.exceptions.NoAvailableConnection;
 import cz.vity.freerapid.core.tasks.exceptions.UpdateFailedException;
+import cz.vity.freerapid.gui.dialogs.WrappedPluginData;
 import cz.vity.freerapid.gui.managers.ClientManager;
 import cz.vity.freerapid.gui.managers.ManagerDirector;
+import cz.vity.freerapid.gui.managers.PluginsManager;
 import cz.vity.freerapid.model.DownloadFile;
 import cz.vity.freerapid.plugins.webclient.ConnectionSettings;
 import cz.vity.freerapid.plugins.webclient.DownloadClient;
@@ -11,6 +13,7 @@ import cz.vity.freerapid.plugins.webclient.DownloadState;
 import cz.vity.freerapid.swing.Swinger;
 import cz.vity.freerapid.utilities.LogUtils;
 import org.apache.commons.httpclient.methods.GetMethod;
+import org.java.plugin.JpfException;
 import org.jdesktop.application.ApplicationContext;
 
 import java.io.File;
@@ -18,6 +21,9 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.net.UnknownHostException;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.logging.Logger;
 
@@ -28,10 +34,13 @@ public class DownloadNewPluginsTask extends DownloadTask {
     private final static Logger logger = Logger.getLogger(DownloadNewPluginsTask.class.getName());
 
     private final ManagerDirector director;
-    private final List<DownloadFile> fileList;
+    private final List<WrappedPluginData> fileList;
     private ScreenInputBlocker blocker;
+    private static boolean restartIsRequiredToUpdateSomePlugins = false;
+    private List<File> newPluginsFiles = new ArrayList<File>();
+    private Collection<WrappedPluginData> updatedPlugins = new LinkedList<WrappedPluginData>();
 
-    public DownloadNewPluginsTask(ManagerDirector director, ApplicationContext context, List<DownloadFile> fileList) {
+    public DownloadNewPluginsTask(ManagerDirector director, ApplicationContext context, List<WrappedPluginData> fileList) {
         super(context.getApplication());
         this.director = director;
         this.fileList = fileList;
@@ -56,13 +65,21 @@ public class DownloadNewPluginsTask extends DownloadTask {
             throw new IOException(getResourceMap().getString("pluginsDirectoryIsNotWriteable"));
         }
         boolean success = false;
-        for (DownloadFile file : fileList) {
+        for (WrappedPluginData data : fileList) {
             if (isCancelled())
                 break;
+            final DownloadFile file = data.getHttpFile();
             try {
                 setDownloadFile(file);
                 downloadFile.setSaveToDirectory(dir);
                 processFile(file);
+                if (data.isNew()) {
+                    newPluginsFiles.add(data.getHttpFile().getOutputFile());
+                } else if (data.isPluginInUse()) {
+                    restartIsRequiredToUpdateSomePlugins = true;
+                } else {
+                    updatedPlugins.add(data);
+                }
                 success = true;
             } catch (Exception e) {
                 file.setState(DownloadState.ERROR);
@@ -91,12 +108,26 @@ public class DownloadNewPluginsTask extends DownloadTask {
         }
     }
 
+
+    private void updatePlugins() throws JpfException {
+        final PluginsManager pluginsManager = director.getPluginsManager();
+        pluginsManager.reRegisterPlugins(updatedPlugins);
+        pluginsManager.initNewPlugins(newPluginsFiles.toArray(new File[newPluginsFiles.size()]));
+    }
+
     @Override
     protected void cancelled() {
         super.cancelled();
-        for (DownloadFile file : fileList) {
-            if (file.getState() != DownloadState.COMPLETED)
+        for (WrappedPluginData data : fileList) {
+            final DownloadFile file = data.getHttpFile();
+            if (file.getState() != DownloadState.COMPLETED) {
                 file.setState(DownloadState.CANCELLED);
+            }
+        }
+        try {
+            updatePlugins();
+        } catch (JpfException e) {
+            LogUtils.processException(logger, e);
         }
     }
 
@@ -140,10 +171,17 @@ public class DownloadNewPluginsTask extends DownloadTask {
 
     @Override
     protected void succeeded(Void result) {
+        try {
+            updatePlugins();
+        } catch (JpfException e) {
+            LogUtils.processException(logger, e);
+        }
         blocker.unblock();
-        final int choiceYesNo = Swinger.getChoiceYesNo(getResourceMap().getString("installed"));
-        if (choiceYesNo == Swinger.RESULT_YES) {
-            director.getMenuManager().getFileActions().restartApplication();
+        if (restartIsRequiredToUpdateSomePlugins) {
+            final int choiceYesNo = Swinger.getChoiceYesNo(getResourceMap().getString("installed"));
+            if (choiceYesNo == Swinger.RESULT_YES) {
+                director.getMenuManager().getFileActions().restartApplication();
+            }
         }
     }
 }
