@@ -19,4 +19,4 @@ UpdateFailed=Update failed. Nothing was updated.
 
 installed=New plugins were installed.\nFor applying new versions of plugins you need to restart application.\nDo you want to restart it now?
 
-pluginsDirectoryIsNotWriteable=Target plugins directory is not writable.You cannot download plugins.\nIf FreeRapid's directory is placed in 'Program files' directory then run FRD as an administrator or place FreeRapid into another directory.
+pluginsDirectoryIsNotWriteable=Target plugins directory is not writable. You cannot download plugins.\nIf FreeRapid's directory is placed in 'Program files' directory then run FRD as an administrator or place FreeRapid into another directory.
